--- a/data/blog/github-markdown-guide.mdx
+++ b/data/blog/github-markdown-guide.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'Markdown Guide'
+title: 'Markdown 指南'
 date: '2019-10-11'
 tags: ['github', 'guide']
-draft: false
+draft: true
 summary: 'Markdown cheatsheet for all your blogging needs - headers, lists, images, tables and more! An illustrated guide based on GitHub Flavored Markdown.'
 ---
 
-# Introduction
+# 介绍
 
 Markdown and Mdx parsing is supported via `unified`, and other remark and rehype packages. `next-mdx-remote` allows us to parse `.mdx` and `.md` files in a more flexible manner without touching webpack.
 
