--- a/data/blog/new-features-in-v1.mdx
+++ b/data/blog/new-features-in-v1.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'New features in v1'
+title: 'v1中的新功能'
 date: 2021-08-07T15:32:14Z
 lastmod: '2021-12-15'
 tags: ['next-js', 'tailwind', 'guide']
-draft: false
-summary: 'An overview of the new features released in v1 - code block copy, multiple authors, frontmatter layout and more'
+draft: true
+summary: 'V1中发布的新功能概述 - 代码块副本，多个作者，额头布局等等'
 layout: PostSimple
 bibliography: references-data.bib
 ---
