--- a/data/blog/helloworld.mdx
+++ b/data/blog/helloworld.mdx
@@ -3,9 +3,9 @@ title: hello-world
 date: '2022-01-04'
 tags: []
 draft: false
-summary: test post
+summary:
 images: []
-layout: PostLayout
+layout: PostSimple
 ---
 
 hello world
