change download url

--- a/data/blog/cpop/pushuigoto2000cncdflac1999bigbigwolf.mdx
+++ b/data/blog/cpop/pushuigoto2000cncdflac1999bigbigwolf.mdx
@@ -34,4 +34,4 @@ B4		活著
 B5		召喚
 ```
 
-[Download](https://oneindex.65style.ga/music/cpop/FLAC/Pu_Shu-I_Go_To_2000-CN-CD-FLAC-1999-BiGBiGWOLF)
+[Download](https://oneindex.65style.eu.org/music/cpop/FLAC/Pu_Shu-I_Go_To_2000-CN-CD-FLAC-1999-BiGBiGWOLF)
